# heart-rate-drift-calculator

./: .env_sample  .gitignore  Cargo.toml  Makefile  README.org  index.html  netlify.toml  test.js  trunk.toml
functions/strava-oauth-exchange/: Cargo.toml  README.md
functions/strava-oauth-exchange/src/: http_handler.rs  main.rs
heart-rate-drift/: Cargo.toml  index.html  test.js
heart-rate-drift/src/: lib.rs  main.rs
netlify/functions/get-strava-activity/: Cargo.toml
netlify/functions/get-strava-activity/src/: main.rs
src/: heart_rate_drift.rs  infrastructure.rs  lib.rs  main.rs
src/infrastructure/: http.rs  mod.rs  strava.rs
src/infrastructure/strava/: http.rs
src/infrastructure/strava/http/tests/: server.rs
web/: test.js  trunk.toml
web/src/: strava.rs
