[package]
name = "heart-rate-drift-calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
oauth2 = "4"
webbrowser = "0.8"
thiserror = "1.0"
anyhow = "1.0"
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = "1.0"
reqwest = { version = "0.11", features = ["json"] }
http = "0.2"

[dev-dependencies]
hyper = { version = "0.14", default-features = false, features = ["server"] }
anyhow = "1.0"
serde_json = "1.0"
