[package]
name = "heart-rate-drift-calculator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
clap = { version = "4.4.4", features = ["derive"] }
wasm-bindgen = "0.2.99"
