[package]
name = "heart-rate-drift-calculator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
thiserror = "2.0.11"
anyhow = "1.0.95"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
clap = { version = "4.5.26", features = ["derive"] }
wasm-bindgen = "0.2.100"
